--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build:sass",
+    "build:sass": "node-sass sass/main.scss main.css",
+    "watch": "npm run watch:sass",
+    "watch:sass": "nodemon -e scss -w sass -x 'npm run build:sass'"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "jquery": "^3.1.0"
+  },
+  "devDependencies": {
+    "node-sass": "^3.8.0",
+    "nodemon": "^1.9.2"
   }
 }
