--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "nodemon": "1.10.2"
   },
   "devDependencies": {
-    "node-sass": "^3.8.0",
+    "node-sass": "3.9.3",
     "nodemon": "^1.9.2"
   }
 }
